--- a/styles/inputs.css
+++ b/styles/inputs.css
@@ -1,45 +1,30 @@
-.input-all{
-    width: 100%;
-    height: 50px;
+
+.width_input{
+    width: 40rem;
 }
 
-.input-all::placeholder{
-    padding-left: 10px;
+.margin_input{
+    margin: 1.25rem;
 }
 
-.btn-registro {
-    height: 40px;
-    font-weight: bold;
-    background: var(--color-white-fixed);
-    border: 1px solid var(--color-grey-2);
+.pnadding_input{
+    padding: 0.62rem;
+}
+.borde_color_input{
+    border: solid 1px var(--color-grey-4);
 }
 
-.btn-registro:hover{
-    cursor: pointer;
+input{
+    height: 3.25rem;
+}
+input::placeholder{
+    color: var(--color-grey-4);
 }
 
-.btn-logar{
-    height: 40px;
-    color: var(--color-white-fixed);
-    background: var(--color-blue-1);
-    border: 1px solid var(--color-blue-1);
+textarea{
+    height: 8.12rem;
 }
 
-.btn-logar:hover{
-    cursor: pointer;
-}
-
-.btn-voltar{
-
-    position: absolute;
-    right: 0px;
-    width: 60px;
-    height: 30px;
-    font-weight: bold;
-    background: var(--color-white-fixed);
-    border: 1px solid var(--color-grey-2);
-}
-
-.btn-voltar:hover{
-    cursor: pointer;
+textarea::placeholder{
+    color: var(--color-grey-4);
 }
