--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
-.section-principal{
+/* .section-principal{
     padding-top: 130px;
     justify-content: center;
     display: flex;
     width: 100vw;
     
-}
+}  */
 
 .div-login{
     display: flex;
